Fix notifications, monetary display, and ticket status flow
- Unescape tickets/drives XML for Admin panels so notifications and total funds refresh reliably.
- Show monetary donations as ₱amount across donor notifications and donation lists.
- Add rider notifications auto-refresh and unescape ticket payload before parsing.
- Prevent premature archiving on ACCEPTED so statuses can progress through PICKED_UP/DELIVERED.
- Ignore nested build outputs (DonationDriverUI/out*, out_bin*) in git.

Made-with: Cursor